testsuite/tests/generics/T8468.stderr
T8468.hs:6:42: error: [GHC-30367]
    • Can't make a derived instance of ‘Generic1 Array’:
        Array must not have exotic unlifted or polymorphic arguments
    • In the data type declaration for ‘Array’

